# my-calculator-app

./: README.md  build.sh  meson.build
data/: io.github.sebastian.Calc.desktop
docs/superpowers/plans/: 2026-06-10-calculadora-gtk4.md
docs/superpowers/specs/: 2026-06-10-calculadora-gtk4-design.md
src/: calc_window.c  calc_window.h  evaluator.c  evaluator.h  history.c  history.h  lexer.c  lexer.h  main.c  memory_reg.c  memory_reg.h  parser.c  parser.h
tests/: meson.build  test_eval.c  test_history.c  test_lexer.c  test_memory.c  test_util.h
